--- a/Server/config/server_config.ini
+++ b/Server/config/server_config.ini
@@ -19,7 +19,8 @@ HOST=0.0.0.0
 PORT=8001
 
 [RestApi]
-HOST=localhost
+# HOST=localhost
+HOST = 0.0.0.0
 PORT=8000
 SERVER_SAFETY=1 # activate security functions in restapi
 BAD_REQUEST_TRESHHOLD=30 # this will allow X amount of bad requests from a client
